--- a/Food Court Management System/Views/Shared/_Layout.cshtml
+++ b/Food Court Management System/Views/Shared/_Layout.cshtml
@@ -3,18 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
     <title>@ViewBag.Title - Food Court Management System</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <header>
-        @Html.Partial("_Header")
-    </header>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        @Html.Partial("_Footer")
     </div>
 
     @Scripts.Render("~/bundles/jquery")
